@@ -1,11 +1,6 @@
 package org.alice.tweedle.unlinked;
 
-import org.alice.tweedle.TweedleArrayType;
-import org.alice.tweedle.TweedleNull;
-import org.alice.tweedle.TweedlePrimitiveValue;
-import org.alice.tweedle.TweedleStatement;
-import org.alice.tweedle.TweedleTypes;
-import org.alice.tweedle.TweedleVoidType;
+import org.alice.tweedle.*;
 import org.alice.tweedle.ast.*;
 import org.junit.Test;
 
@@ -237,7 +232,7 @@ public class TweedleStatementParseTest {
   @Test
   public void aDoInOrdersFirstStatementShouldBeDoInOrder() {
     DoInOrder tested = (DoInOrder) parseStatement("doInOrder { doInOrder {} return; }");
-    assertTrue("The block's first statement should be a DoInorder.", tested.getStatements().get(0) instanceof DoInOrder);
+    assertTrue("The block's first statement should be a DoInorder.", tested.getStatements().getFirst() instanceof DoInOrder);
   }
 
   @Test
@@ -279,7 +274,7 @@ public class TweedleStatementParseTest {
   @Test
   public void aDoTogethersFirstStatementShouldBeDoInOrder() {
     DoTogether tested = (DoTogether) parseStatement("doTogether { doInOrder {} return; }");
-    assertTrue("The block's first statement should be a DoInorder.", tested.getStatements().get(0) instanceof DoInOrder);
+    assertTrue("The block's first statement should be a DoInorder.", tested.getStatements().getFirst() instanceof DoInOrder);
   }
 
   @Test
@@ -405,7 +400,7 @@ public class TweedleStatementParseTest {
   @Test
   public void nestedDoInOrdersInnerOneShouldBeEnabled() {
     DoInOrder tested = (DoInOrder) parseStatement("doInOrder { doInOrder {} }");
-    assertTrue("The inner doInOrder should be enabled.", tested.getStatements().get(0).isEnabled());
+    assertTrue("The inner doInOrder should be enabled.", tested.getStatements().getFirst().isEnabled());
   }
 
   @Test
@@ -417,7 +412,7 @@ public class TweedleStatementParseTest {
   @Test
   public void disabledNestedDoInOrdersInnerOneShouldBeEnabled() {
     DoInOrder tested = (DoInOrder) parseStatement("*< doInOrder { doInOrder {} } >*");
-    assertTrue("The inner doInOrder should be enabled.", tested.getStatements().get(0).isEnabled());
+    assertTrue("The inner doInOrder should be enabled.", tested.getStatements().getFirst().isEnabled());
   }
 
   @Test
@@ -429,7 +424,7 @@ public class TweedleStatementParseTest {
   @Test
   public void disabledInnerDoInOrdersInnerOneShouldBeDisabled() {
     DoInOrder tested = (DoInOrder) parseStatement("doInOrder { *< doInOrder {} >* }");
-    assertFalse("The inner doInOrder should be disabled.", tested.getStatements().get(0).isEnabled());
+    assertFalse("The inner doInOrder should be disabled.", tested.getStatements().getFirst().isEnabled());
   }
 
   @Test
